# CrafterUI

./: .gitignore  CMakeLists.txt  README  README.md  bugs  build.bash  debug.bash  old.bash  release.bash  run.bash  setup.bash  test  test2  test3
Crafter/: CMakeLists.txt
Crafter/data/recipes/: actually.yaml  astral.yaml  botania.yaml  carpenter.yaml  chemistry.yaml  foregoing.yaml  forestry.yaml  galacticraft.yaml  immersive.yaml  import.yaml  mekanism-bits.yaml  mystical.yaml  nuclearcraft.yaml  pam's.yaml  pams.yaml  random_bobs.yaml  solar.yaml  tech-reborn.yaml  test.yaml  thermal.yaml  tinkers.yaml  vanilla.yaml
Crafter/src/: CMakeLists.txt  graph-builder.cpp  graph-builder.h  graph-construct.cpp  graph.h  graph.tpp  import.cpp  import.h
CrafterUI/: CMakeLists.txt  graphuimanager.cpp  graphuimanager.h  lineshape.cpp  lineshape.h  main.cpp  qml.qrc  qmlcommunication.cpp  qmlcommunication.h
CrafterUI/qml/: BetterColumn.ui.qml  LinePath.qml  MainGraph.qml  MainGraphForm.ui.qml  RecipeDetailed.qml  RecipeDetailedForm.ui.qml  RecipeInput.qml  RecipeInputForm.ui.qml  RecipeNode.qml  RecipeNodeForm.ui.qml  SideColumn.qml  SideColumnForm.ui.qml  SingleRecipe.ui.qml  TableRow.ui.qml  TestLayout.qml  TestLayoutForm.ui.qml  main.qml
yaml-cpp/: CMakeLists.txt  compile_commands.json
